			   XPCE ChangeLog
			   ==============

* ADDED: UNICODE support for ->save_in_file on names and strings.

* ADDED: UNICODE support for class text_buffer in ->save_in_file and
  file<-object.


VERSION 6.5.12, distributed with SWI-Prolog 5.5.12
==================================================

* ADDED: library(pce_progress): provide progress bars.

* FIXED: Bug#28: avoid strtod() locale-specific interpretation of resource
  strings.   Jiri Spitz.

* FIXED: Bug#28: error messages of class tokenizer.  Jiri Spitz.

* FIXED: Bug#26: make accelerators in menus work.  Holger Kanwischer.


VERSION 6.5.11, distributed with SWI-Prolog 5.5.11
==================================================

* ADDED: Support UNICODE in window titles.

* ADDED: Win32: Support for UNICODE in cut/paste.

* PORT: adopt new SWI-Prolog `xos' layer around MS-Windows, providing access
  to files using UNICODE names.


VERSION 6.5.9, distributed with SWI-Prolog 5.5.9
================================================

* FIXED: Bug#21: wrong computation of window<-visible.  Holger Kanwischer.

* FIXED: Bug#23.  Menu selection handling (integers).  Holger Kanwischer.


VERSION 6.5.8, distributed with SWI-Prolog 5.5.8
================================================

* ENHANCED: xpce-stub.exe to show a messagebox if initialisation or execution
  fails.  Simplifies debugging.

* ENHANCED: improved error message if selector is not an atom.

* FIXED: seek issues on streams created from XPCE objects.

* FIXED: integer return values of prolog defined methods incorrectly mapped
  to XPCE floats.

* ADDED: `text_buffer->iso_latin_1' to see whether text can be expressed in
  ISO Latin-1.

* FIXED: Avoid BadAtom errors on X_GetAtomName when getting the X11 selection.


VERSION 6.5.7, distributed with SWI-Prolog 5.5.7
================================================

* ADDED: PceEmacs: ->insert_character_by_code to interactively insert a
  character by entering its numeric UNICODE value.
